[package]
name = "gpio-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-trait = "0.1.50"
zeromq = { default-features = false, features = ["async-std-runtime", "all-transport"], git = "https://github.com/zeromq/zmq.rs" }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[dependencies.wiringpi]
git = "https://github.com/jvandervelden/rust-wiringpi"

[dependencies.async-std]
version = "1.7.0"
features = ["unstable"]